--- a/consultar.html
+++ b/consultar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultar</title>
     <script type="text/javascript" src="js/index.js"> </script>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -14,12 +14,12 @@
     <p>Esta página serve apenas para consultar as suas notas salvas, caso queira salvar algo, clique: <a
             href="index.html"> Voltar</a> </p>
 
-    <div id="Não Urgentes">
-        <label for="urgenten">Não Urgentes</label> <br>
+    <div class="nUrgentes">
+       <h2>Urgentes</h2> <br>
     </div>
 
-    <div id="Urgentes">
-        <label for="urgente">Urgentes</label> <br>
+    <div class="urgentes">
+        <h2>Não Urgentes</h2> <br>
     </div>
 
     <input type="button" value="Excluir Nota" id="btnexcluirn" onclick="excluir1()"><br>
